# mech-interp-color-steering

./: README.md  activation-steering.ipynb  color-exp-2.ipynb  color-steering-actadd.py  color-steering-avg.py  color-steering-exp-1.ipynb  color_extractor.py  color_steering_actadd.py  dataset.py  dual-color-steering-actadd.py  gen_color_dataset.py  html_clustering_analysis.py  html_color_analyzer.py  html_color_analyzer_browser.py  losses.py  probe_dataset.py  probes.py  pyproject.toml  simple-activation-eng.ipynb  token_logprob_analysis.ipynb
archive/: activation-steering.ipynb  causality_test.py  color-steering-exp-1.ipynb  color_steering_exp_1.py  control-probes.ipynb  exp.ipynb  gen_color_dataset.py  intervention_utils.py  probe_dataset.py  reading-probes.ipynb  train_test_utils.py  tt_dataset.py  tt_explore_reading_data.py  utils.py
comprehensive_steering_results_act_add/: comprehensive_results.json
data/: blue_prompts.json  dataset_with_colors_in_prompt.csv  dataset_with_colors_in_prompt_with_annotated_colors.csv  dataset_without_colors_in_prompt.csv  dataset_without_colors_in_prompt_with_annotated_colors.csv  green_prompts.json  indigo_prompts.json  orange_prompts.json  red_prompts.json  violet_prompts.json  yellow_prompts.json
dual_steering_results_act_add/: dual_steering_results.json
outputs/: output_0.html  output_1.html  output_10.html  output_11.html  output_12.html  output_13.html  output_14.html  output_15.html  output_16.html  output_17.html  output_18.html  output_19.html  output_2.html  output_20.html  output_21.html  output_22.html  output_3.html  (+33 more)
(+2271 files in other folders)
